@@ -43,6 +43,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #8663: distutils.log emulates backslashreplace error handler. Fix
+  compilation in a non-ASCII directory if stdout encoding is ASCII (eg. if
+  stdout is not a TTY).
+
 - Issue #8688: Distutils now recalculates MANIFEST everytime.
 
 - Issue #5099: subprocess.Popen.__del__ no longer references global objects
